Fixed back overflow

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -78,7 +78,7 @@ nav {
 	.inner {
 		width: 100%;
 		margin: auto;
-		overflow-x: visible;
+		overflow-x: hidden;
 	}
 
 	.inner > div {
